--- a/serverless.yml
+++ b/serverless.yml
@@ -167,17 +167,13 @@ provider:
             - dynamodb:UpdateItem
           Resource:
             Fn::GetAtt: [JobsTable, Arn]
-        - Effect: "Allow"
+        - Effect: Allow
           Action:
-            - sns:Publish
+            - states:StartExecution
+            - states:SendTaskSuccess
+            - states:SendTaskFailure
           Resource:
-            Ref: ProcessUploadSnsTopic
-        - Effect: "Allow"
-          Action:
-            - sqs:SendMessage
-          Resource:
-            Fn::GetAtt: [TrimQueue, Arn]
-
+            - Fn::GetAtt: [AnswerUploadStepFunction, Arn]
 package:
 #  individually: false
  patterns:
@@ -319,10 +315,9 @@ functions:
     memorySize: 1024
     timeout: 30 # 30sec is max for http requests
     environment:
-      UPLOAD_SNS_ARN:
-        Ref: ProcessUploadSnsTopic
-      TRIM_SQS_URL:
-        Ref: TrimQueue
+      ANSWER_UPLOAD_STEP_FUNCTION_ARN:
+        Fn::GetAtt: [AnswerUploadStepFunction, Arn]
+
     events:
       - http:
           path: /upload/answer
@@ -338,70 +333,43 @@ functions:
       # see https://www.serverless.com/framework/docs/providers/aws/guide/layers#using-your-layers
       - { Ref: BinariesLambdaLayer }
 
-  answer-trim:
-    handler: answer-trim.handler
-    memorySize: 4096 # needs cpu to run ffmpeg
-    timeout: 600 # some videos take 5min or so
-    environment:
-      UPLOAD_SNS_ARN:
-        Ref: ProcessUploadSnsTopic
-    events:
-      - sqs:
-          arn:
-            Fn::GetAtt: [TrimQueue, Arn]
-          batchSize: 1
-    layers:
-      # binaries gets named "Binaries"+"LambdaLayer":
-      # see https://www.serverless.com/framework/docs/providers/aws/guide/layers#using-your-layers
-      - { Ref: BinariesLambdaLayer }
+  step_trim:
+      handler: step-trim.handler
+      memorySize: 4096 # needs cpu to run ffmpeg
+      timeout: 600 # some videos take 5min or so
+      layers:
+        # binaries gets named "Binaries"+"LambdaLayer":
+        # see https://www.serverless.com/framework/docs/providers/aws/guide/layers#using-your-layers
+        - { Ref: BinariesLambdaLayer }
 
-  answer-transcode-web:
-    handler: answer-transcode-web.handler
-    memorySize: 8192 # 5min video takes 100sec with 2GB, 50sec with 4GB, 30sec with 8GB
-    timeout: 900 # give max time to make sure it gets transcoded
-    events:
-      - sqs:
-          arn:
-            Fn::GetAtt: [TranscodeWebQueue, Arn]
-          batchSize: 1
-    layers:
-      # binaries gets named "Binaries"+"LambdaLayer":
-      # see https://www.serverless.com/framework/docs/providers/aws/guide/layers#using-your-layers
-      - { Ref: BinariesLambdaLayer }
+  step_transcode_web:
+      handler: step-transcode-web.handler
+      memorySize: 8192 # 5min video takes 100sec with 2GB, 50sec with 4GB, 30sec with 8GB
+      timeout: 900 # give max time to make sure it gets transcoded
+      layers:
+        - { Ref: BinariesLambdaLayer }
 
-  answer-transcode-mobile:
-    handler: answer-transcode-mobile.handler
-    memorySize: 8192 # 5min video takes 100sec with 2GB, 50sec with 4GB, 30sec with 8GB
-    timeout: 900
-    events:
-      - sqs:
-          arn:
-            Fn::GetAtt: [TranscodeMobileQueue, Arn]
-          batchSize: 1            
-    layers:
-      # binaries gets named "Binaries"+"LambdaLayer":
-      # see https://www.serverless.com/framework/docs/providers/aws/guide/layers#using-your-layers
-      - { Ref: BinariesLambdaLayer }
+  step_transcode_mobile:
+      handler: step-transcode-mobile.handler
+      memorySize: 8192 # 5min video takes 100sec with 2GB, 50sec with 4GB, 30sec with 8GB
+      timeout: 900 # give max time to make sure it gets transcoded
+      layers:
+        - { Ref: BinariesLambdaLayer }
 
-  answer-transcribe-start:
-    handler: answer-transcribe-start.handler
-    memorySize: 1024 # need to extract audio
-    timeout: 30
-    environment:
-      TRANSCRIBE_INPUT_BUCKET: ${self:provider.environment.TRANSCRIBE_INPUT_BUCKET}
-      TRANSCRIBE_OUTPUT_BUCKET: ${self:provider.environment.TRANSCRIBE_OUTPUT_BUCKET}
-    events:
-      - sqs:
-          arn:
-            Fn::GetAtt: [TranscribeQueue, Arn]
-          batchSize: 1
-    layers:
-      # binaries gets named "Binaries"+"LambdaLayer":
-      # see https://www.serverless.com/framework/docs/providers/aws/guide/layers#using-your-layers
-      - { Ref: BinariesLambdaLayer }
+  step_transcribe_start:
+      handler: step-transcribe-start.handler
+      memorySize: 1024 # need to extract audio
+      timeout: 30
+      environment:
+        TRANSCRIBE_INPUT_BUCKET: ${self:provider.environment.TRANSCRIBE_INPUT_BUCKET}
+        TRANSCRIBE_OUTPUT_BUCKET: ${self:provider.environment.TRANSCRIBE_OUTPUT_BUCKET}
+      layers:
+        # binaries gets named "Binaries"+"LambdaLayer":
+        # see https://www.serverless.com/framework/docs/providers/aws/guide/layers#using-your-layers
+        - { Ref: BinariesLambdaLayer }
 
-  answer-transcribe-collect:
-    handler: answer-transcribe-collect.handler
+  step_transcribe_collect:
+    handler: step-transcribe-collect.handler
     memorySize: 512
     timeout: 30
     events:
@@ -419,6 +387,10 @@ functions:
           rules:
             - suffix: '.vtt'
 
+  step_mark_failed:
+      handler: step-mark-failed.handler
+      timeout: 30
+
 resources:
   Conditions:
     CreateCloudWatchAlarm:
@@ -426,117 +398,15 @@ resources:
         - Fn::Equals: ['${self:provider.stage}', 'qa']
         - Fn::Equals: ['${self:provider.stage}', 'prod']
   Resources:
-    TranscodeWebDLQ:
+    AnswerUploadStepFunction: ${file(./resources/StepFunctions/AnswerUploadStepFunction.yml):StateMachine}
+    AnswerUploadStepFunctionExecutionRole: ${file(./resources/StepFunctions/AnswerUploadStepFunctionExecutionRole.yml):Role}
+
+    AnswerUploadDLQ:
       Type: AWS::SQS::Queue
       Properties:
         DelaySeconds: 30
-        QueueName: upload-transcode-web-dlq-${self:provider.stage}
+        QueueName: answer-upload-dlq-${self:provider.stage}
         MessageRetentionPeriod: 1209600 # max 14 days, default is 4 days
-    
-    TranscodeMobileDLQ:
-      Type: AWS::SQS::Queue
-      Properties:
-        DelaySeconds: 30
-        QueueName: upload-transcode-mobile-dlq-${self:provider.stage}
-        MessageRetentionPeriod: 1209600 # max 14 days, default is 4 days
-
-    TranscribeDLQ:
-      Type: AWS::SQS::Queue
-      Properties:
-        DelaySeconds: 30
-        QueueName: upload-transcribe-dlq-${self:provider.stage}
-        MessageRetentionPeriod: 1209600 # max 14 days, default is 4 days
-
-    TrimDLQ:
-      Type: AWS::SQS::Queue
-      Properties:
-        DelaySeconds: 30
-        QueueName: upload-trim-dlq-${self:provider.stage}
-        MessageRetentionPeriod: 1209600 # max 14 days, default is 4 days
-
-    TrimQueue:
-      Type: AWS::SQS::Queue
-      Properties:
-        # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-sqs-queues.html
-        QueueName: upload-trim-queue-${self:provider.stage}
-        VisibilityTimeout: 1200 # AWS recommends 6 times lambdas timeout
-        RedrivePolicy:
-          deadLetterTargetArn:
-            Fn::GetAtt: [TrimDLQ, Arn]
-          maxReceiveCount: 1 # AWS recommends minimum 5, but we have to fix clients first not to delete failed tasks
-
-    TranscodeWebQueue:
-      Type: AWS::SQS::Queue
-      Properties:
-        # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-sqs-queues.html
-        QueueName: upload-trancode-web-queue-${self:provider.stage}
-        VisibilityTimeout: 1200 # AWS recommends 6 times lambdas timeout
-        RedrivePolicy:
-          deadLetterTargetArn:
-            Fn::GetAtt: [TranscodeWebDLQ, Arn]
-          maxReceiveCount: 1 # AWS recommends minimum 5, but we have to fix clients first not to delete failed tasks
-    
-    TranscodeMobileQueue:
-      Type: AWS::SQS::Queue
-      Properties:
-        # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-sqs-queues.html
-        QueueName: upload-trancode-mobile-queue-${self:provider.stage}
-        VisibilityTimeout: 1200 # AWS recommends 6 times lambdas timeout
-        RedrivePolicy:
-          deadLetterTargetArn:
-            Fn::GetAtt: [TranscodeMobileDLQ, Arn]
-          maxReceiveCount: 1 # AWS recommends minimum 5, but we have to fix clients first not to delete failed tasks
-    
-    TranscribeQueue:
-      Type: AWS::SQS::Queue
-      Properties:
-        # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-sqs-queues.html
-        QueueName: upload-transcribe-queue-${self:provider.stage}
-        VisibilityTimeout: 1200 # AWS recommends 6 times lambdas timeou
-        RedrivePolicy:
-          deadLetterTargetArn:
-            Fn::GetAtt: [TranscribeDLQ, Arn]
-          maxReceiveCount: 1 # AWS recommends minimum 5, but we have to fix clients first not to delete failed tasks
-
-    ProcessUploadSnsTopic:
-      Type: AWS::SNS::Topic
-      Properties:
-        TopicName: 'mentor-upload-process-topic-${self:provider.stage}'
-        Subscription:
-          - Protocol: sqs
-            Endpoint: 
-              Fn::GetAtt: [TranscodeWebQueue, Arn]
-          - Protocol: sqs
-            Endpoint: 
-              Fn::GetAtt: [TranscodeMobileQueue, Arn]
-          - Protocol: sqs
-            Endpoint: 
-              Fn::GetAtt: [TranscribeQueue, Arn]
-
-    SnsToSqsPolicy:
-      Type: AWS::SQS::QueuePolicy
-      Properties:
-        PolicyDocument:
-          Version: "2012-10-17"
-          Statement:
-            - Sid: "Allow SNS publish to SQS"
-              Effect: Allow
-              Principal: 
-                Service: "sns.amazonaws.com"
-              Resource:
-                - Fn::GetAtt: [TranscodeWebQueue, Arn]
-                - Fn::GetAtt: [TranscodeMobileQueue, Arn]
-                - Fn::GetAtt: [TranscribeQueue, Arn]
-              Action: SQS:SendMessage
-              Condition:
-                ArnEquals:
-                  aws:SourceArn: 
-                    # return value is ARN, so no need for Fn::GetAtt
-                    Ref: ProcessUploadSnsTopic
-        Queues:
-          - Ref: TranscodeWebQueue
-          - Ref: TranscodeMobileQueue
-          - Ref: TranscribeQueue
 
     TranscribeInputBucket:
       Type: AWS::S3::Bucket
@@ -558,13 +428,13 @@ resources:
             Status: Enabled
             ExpirationInDays: 7
 
-    TranscodeWebDLQAlarm:
+    AnswerUploadDLQAlarm:
       Type: AWS::CloudWatch::Alarm
       Condition: CreateCloudWatchAlarm
       Properties:
         ActionsEnabled: true
-        AlarmName: 'Number of failed upload jobs ${self:resources.Resources.TranscodeWebDLQ.Properties.QueueName}'
-        AlarmDescription: 'Number of failed transcode-web jobs greater than zero'
+        AlarmName: 'Answer upload failed jobs ${self:resources.Resources.AnswerUploadDLQ.Properties.QueueName}'
+        AlarmDescription: 'Number of failed answer upload jobs greater than zero'
         Namespace: 'AWS/SQS'
         Statistic: 'Sum'
         MetricName: 'ApproximateNumberOfMessagesVisible'
@@ -575,73 +445,7 @@ resources:
         TreatMissingData: 'notBreaching'
         Dimensions:
           - Name: QueueName
-            Value: ${self:resources.Resources.TranscodeWebDLQ.Properties.QueueName}
-        AlarmActions:
-          - ${self:custom.stages.${self:provider.stage}.ALERT_SNS_ARN}
-        OKActions:
-          - ${self:custom.stages.${self:provider.stage}.ALERT_SNS_ARN}
-    TranscodeMobileDLQAlarm:
-      Type: AWS::CloudWatch::Alarm
-      Condition: CreateCloudWatchAlarm
-      Properties:
-        ActionsEnabled: true
-        AlarmName: 'Number of failed upload jobs ${self:resources.Resources.TranscodeMobileDLQ.Properties.QueueName}'
-        AlarmDescription: 'Number of failed transcode-mobile jobs greater than zero'
-        Namespace: 'AWS/SQS'
-        Statistic: 'Sum'
-        MetricName: 'ApproximateNumberOfMessagesVisible'
-        ComparisonOperator: 'GreaterThanThreshold'
-        EvaluationPeriods: 1
-        Period: 300 # 5 minutes in seconds
-        Threshold: 0
-        TreatMissingData: 'notBreaching'
-        Dimensions:
-          - Name: QueueName
-            Value: ${self:resources.Resources.TranscodeMobileDLQ.Properties.QueueName}
-        AlarmActions:
-          - ${self:custom.stages.${self:provider.stage}.ALERT_SNS_ARN}
-        OKActions:
-          - ${self:custom.stages.${self:provider.stage}.ALERT_SNS_ARN}
-    TranscribeDLQAlarm:
-      Type: AWS::CloudWatch::Alarm
-      Condition: CreateCloudWatchAlarm
-      Properties:
-        ActionsEnabled: true
-        AlarmName: 'Number of failed upload jobs ${self:resources.Resources.TranscribeDLQ.Properties.QueueName}'
-        AlarmDescription: 'Number of failed transcribe-answer jobs greater than zero'
-        Namespace: 'AWS/SQS'
-        Statistic: 'Sum'
-        MetricName: 'ApproximateNumberOfMessagesVisible'
-        ComparisonOperator: 'GreaterThanThreshold'
-        EvaluationPeriods: 1
-        Period: 300 # 5 minutes in seconds
-        Threshold: 0
-        TreatMissingData: 'notBreaching'
-        Dimensions:
-          - Name: QueueName
-            Value: ${self:resources.Resources.TranscribeDLQ.Properties.QueueName}
-        AlarmActions:
-          - ${self:custom.stages.${self:provider.stage}.ALERT_SNS_ARN}
-        OKActions:
-          - ${self:custom.stages.${self:provider.stage}.ALERT_SNS_ARN}
-    TrimDLQAlarm:
-      Type: AWS::CloudWatch::Alarm
-      Condition: CreateCloudWatchAlarm
-      Properties:
-        ActionsEnabled: true
-        AlarmName: 'Number of failed trim jobs ${self:resources.Resources.TrimDLQ.Properties.QueueName}'
-        AlarmDescription: 'Number of failed trim jobs greater than zero'
-        Namespace: 'AWS/SQS'
-        Statistic: 'Sum'
-        MetricName: 'ApproximateNumberOfMessagesVisible'
-        ComparisonOperator: 'GreaterThanThreshold'
-        EvaluationPeriods: 1
-        Period: 300 # 5 minutes in seconds
-        Threshold: 0
-        TreatMissingData: 'notBreaching'
-        Dimensions:
-          - Name: QueueName
-            Value: ${self:resources.Resources.TrimDLQ.Properties.QueueName}
+            Value: ${self:resources.Resources.AnswerUploadDLQ.Properties.QueueName}
         AlarmActions:
           - ${self:custom.stages.${self:provider.stage}.ALERT_SNS_ARN}
         OKActions:
@@ -713,13 +517,3 @@ resources:
         ResourceArn:
           Fn::Sub: 'arn:aws:apigateway:${AWS::Region}::/restapis/${ApiGatewayRestApi}/stages/${self:provider.stage}'
         WebACLArn: '${self:custom.stages.${self:provider.stage}.WEBACL_ARN}'
-
-  Outputs:
-    ProcessUploadSnsTopicName:
-      Description: SNS topic name
-      Value: 
-        Fn::GetAtt: [ProcessUploadSnsTopic, TopicName]
-    ProcessUploadSnsTopicArn:
-      Description: SNS topic ARN
-      Value: 
-        Ref: ProcessUploadSnsTopic
