--- a/serverless.yml
+++ b/serverless.yml
@@ -464,6 +464,27 @@ resources:
         OKActions:
           - ${self:custom.stages.${self:provider.stage}.ALERT_SNS_ARN}
 
+    ApiErrors:
+      Type: AWS::CloudWatch::Alarm
+      Condition: CreateCloudWatchAlarm
+      Properties:
+        ActionsEnabled: true
+        AlarmName: 'upload processor API Gateway 5xx errors ${self:provider.stage}'
+        AlarmDescription: 'upload processor API Gateway 5xx errors ${self:provider.stage}'
+        Namespace: AWS/ApiGateway
+        MetricName: 5XXError
+        Statistic: Sum
+        Threshold: 0
+        ComparisonOperator: 'GreaterThanThreshold'
+        EvaluationPeriods: 1
+        Period: 60
+        TreatMissingData: 'notBreaching'
+        Dimensions:
+          - Name: ApiName
+            Value: '${self:provider.stage}-${self:service}'
+        AlarmActions:
+          - ${self:custom.stages.${self:provider.stage}.ALERT_SNS_ARN}
+
     Response5xx:
       Type: 'AWS::ApiGateway::GatewayResponse'
       Properties:
