--- a/cicd/e2espec.yml
+++ b/cicd/e2espec.yml
@@ -33,4 +33,4 @@ phases:
   build:
     commands:
       - echo running integration tests against deployed qa api
-      - make test:integration
+      - make test-integration
