--- a/cicd/buildspec.yml
+++ b/cicd/buildspec.yml
@@ -23,7 +23,7 @@ phases:
       - pip3 install flake8
       # these are required to run tests
       - pip3 install -r requirements.txt
-      - pip3 install -r test-requirements.txt
+      - pip3 install -r requirements-test.txt
 
   build:
     commands:
