--- a/cicd/e2espec.yml
+++ b/cicd/e2espec.yml
@@ -34,7 +34,7 @@ phases:
       - . /root/venv/bin/activate
       # these are required to run tests
       - pip3 install -r requirements.txt
-      - pip3 install -r test-requirements.txt
+      - pip3 install -r requirements-test.txt
 
   build:
     commands:
