update apigw custom domain names

--- a/serverless.yml
+++ b/serverless.yml
@@ -18,8 +18,8 @@ plugins:
 
 custom:
   domain:
-    dev: api-dev.mentorpal.org
-    qa: api-qa.mentorpal.org
+    dev: api.devmentorpal.org
+    qa: api.qamentorpal.org
     prod: api.mentorpal.org
   customDomain:
     domainName: ${self:custom.domain.${opt:stage, 'dev'}}
