add vtt upload lambda w/ vtt validation

--- a/serverless.yml
+++ b/serverless.yml
@@ -271,6 +271,21 @@ functions:
             identitySource: method.request.header.Authorization
             type: token
 
+  http_vtt:
+    handler: vtt_upload.handler
+    memorySize: 1024
+    timeout: 30 # 30sec is max for http requests
+    events:
+      - http:
+          path: /vtt
+          method: post
+          cors: true
+          authorizer:
+            name: authorizer_func
+            resultTtlInSeconds: 300
+            identitySource: method.request.header.Authorization
+            type: token
+
   http_transfer_start:
     handler: transfer-start.handler
     memorySize: 512
